# openenclave

./: .gitmodules
enclave/core/sgx/: reloc.c
host/sgx/: loadelf.c
tests/module_loading/: CMakeLists.txt
tests/module_loading/enc/: CMakeLists.txt  enc.c
tests/module_loading/module_negative_path/: CMakeLists.txt
